--- a/app/views/applications/index.html.erb
+++ b/app/views/applications/index.html.erb
@@ -1,5 +1,5 @@
 <h1>All Applications</h1>
  
- <% @applications.each do |application| %>
+ <% current_user.applications.each do |application| %>
    <p><%= link_to application.title, application %></p>
  <% end %>
