--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -1,5 +1,6 @@
 <h1><%= @application.title %></h1>
  <p><%= @application.url %></p>
+ <p><%= @events.count %></p>
 
 
  <%= link_to "Delete Aplication", @application, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this application?'} %>
