--- a/app/views/applications/new.html.erb
+++ b/app/views/applications/new.html.erb
@@ -1,9 +1,29 @@
+ <h1>New Application</h1>
+ 
+ <div class="row">
+   <div class="col-md-4">
+     <p>Guidelines for applications</p>
+     <ul>
+       <li>Make sure you give it a title!</li>
+       <li>Spell the URL correctly.</li>
+     </ul>
+   </div>
+
+
+
+<div class="col-md-8">
 <%= form_for @application do |f| %>
+<div class="form-group">
    <%= f.label :title %>
-   <%= f.text_field :title %>
- 
+   <%= f.text_field :title, class: 'form-control' %>
+</div>
+<div class="form-group">
    <%= f.label :url %>
-   <%= f.text_area :url %>
- 
-   <%= f.submit "Save" %>
+   <%= f.text_area :url, class: 'form-control' %>
+   </div>
+<div class="form-group">
+   <%= f.submit "Save", class: 'btn btn-success' %>
+   </div>
  <% end %>
+ </div>
+ </div>
