--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+
+
+
+<div class="page-header">
+  <h1>Boldmetrics <small>Analytics service and reporting tool</small></h1>
+</div>
+
+
+    
+  
+
